--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         }
     ],
     "require": {
-        "slim/slim": "^4.5"
+        "slim/slim": "^4.5",
+        "slim/psr7": "^1.1",
+        "ext-pdo": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
